chore: pinning dependencies
Fixes #1059

--- a/packages/proxy/app/package.json
+++ b/packages/proxy/app/package.json
@@ -20,10 +20,10 @@
   },
   "main": "bin/www",
   "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.5",
-    "debug": "^4.1.1",
-    "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.5",
+    "debug": "4.1.1",
+    "express": "4.16.4",
+    "morgan": "1.9.1"
   }
 }
