--- a/plugins/plugin-wrk/package.json
+++ b/plugins/plugin-wrk/package.json
@@ -26,11 +26,11 @@
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
-    "columnify": "^1.5.4",
+    "columnify": "1.5.4",
     "expand-home-dir": "0.0.3",
-    "parse-duration": "^0.1.1",
-    "pretty-ms": "^4.0.0",
-    "properties-parser": "^0.3.1",
+    "parse-duration": "0.1.1",
+    "pretty-ms": "4.0.0",
+    "properties-parser": "0.3.1",
     "tmp": "0.0.33",
     "wrk": "git://github.com/starpit/node-wrk.git#latency_stacks"
   },
