--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,27 +33,27 @@
     "postpack": "for i in dist/*; do rm -rf ./`basename $i`; done"
   },
   "dependencies": {
-    "app-module-path": "^2.2.0",
-    "colors": "^1.3.3",
-    "columnify": "^1.5.4",
-    "debug": "^4.1.1",
-    "electron-context-menu": "^0.11.0",
-    "electron-squirrel-startup": "^1.0.0",
+    "app-module-path": "2.2.0",
+    "colors": "1.3.3",
+    "columnify": "1.5.4",
+    "debug": "4.1.1",
+    "electron-context-menu": "0.11.0",
+    "electron-squirrel-startup": "1.0.0",
     "expand-home-dir": "0.0.3",
-    "extract-zip": "^1.6.7",
-    "fs-extra": "^7.0.1",
-    "js-beautify": "^1.9.0",
-    "json-colorizer": "^2.1.2",
-    "mkdirp": "^0.5.1",
-    "needle": "^2.2.4",
-    "opn": "^5.5.0",
-    "pretty-ms": "^4.0.0",
-    "properties-parser": "^0.3.1",
+    "extract-zip": "1.6.7",
+    "fs-extra": "7.0.1",
+    "js-beautify": "1.9.0",
+    "json-colorizer": "2.1.2",
+    "mkdirp": "0.5.1",
+    "needle": "2.2.4",
+    "opn": "5.5.0",
+    "pretty-ms": "4.0.0",
+    "properties-parser": "0.3.1",
     "tmp": "0.0.33",
-    "yargs-parser": "^13.0.0"
+    "yargs-parser": "13.0.0"
   },
   "devDependencies": {
-    "request-promise": "^4.2.4"
+    "request-promise": "4.2.4"
   },
   "publishConfig": {
     "access": "public"
