--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -31,21 +31,21 @@
     "postpack": "npm run tsconfig:postpack; for i in build/*; do rm -rf ./`basename $i`; done"
   },
   "dependencies": {
-    "@types/debug": "^4.1.2",
-    "@types/mkdirp-promise": "^5.0.0",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^11.11.6",
-    "@types/swagger-schema-official": "^2.0.15",
-    "@types/webdriverio": "^4.13.1",
-    "colors": "^1.3.3",
-    "debug": "^4.1.1",
-    "electron": "^4.1.1",
-    "fs-extra": "^7.0.1",
-    "spectron": "^5.0.0",
-    "terser": "^3.17.0",
-    "tslint": "^5.14.0",
-    "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.3.4000"
+    "@types/debug": "4.1.2",
+    "@types/mkdirp-promise": "5.0.0",
+    "@types/mocha": "5.2.6",
+    "@types/node": "11.11.6",
+    "@types/swagger-schema-official": "2.0.15",
+    "@types/webdriverio": "4.13.1",
+    "colors": "1.3.3",
+    "debug": "4.1.1",
+    "electron": "4.1.1",
+    "fs-extra": "7.0.1",
+    "spectron": "5.0.0",
+    "terser": "3.17.0",
+    "tslint": "5.14.0",
+    "tslint-config-standard": "8.0.1",
+    "typescript": "3.3.4000"
   },
   "publishConfig": {
     "access": "public"
