--- a/plugins/plugin-grid/package.json
+++ b/plugins/plugin-grid/package.json
@@ -22,8 +22,8 @@
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
-    "pretty-ms": "^4.0.0",
-    "uuid": "^3.3.2"
+    "pretty-ms": "4.0.0",
+    "uuid": "3.3.2"
   },
   "kui": {
     "headless": false
