--- a/plugins/plugin-manager/package.json
+++ b/plugins/plugin-manager/package.json
@@ -25,9 +25,9 @@
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
-    "fs-extra": "^7.0.1",
+    "fs-extra": "7.0.1",
     "tmp": "0.0.33",
-    "which": "^1.3.1"
+    "which": "1.3.1"
   },
   "kui": {
     "webpack": false
