--- a/plugins/plugin-openwhisk-debug/package.json
+++ b/plugins/plugin-openwhisk-debug/package.json
@@ -25,11 +25,11 @@
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
-    "extract-zip": "^1.6.7",
-    "fs-extra": "^7.0.1",
-    "needle": "^2.2.4",
-    "node-docker-api": "^1.1.22",
-    "promise-retry": "^1.1.1",
+    "extract-zip": "1.6.7",
+    "fs-extra": "7.0.1",
+    "needle": "2.2.4",
+    "node-docker-api": "1.1.22",
+    "promise-retry": "1.1.1",
     "tmp": "0.0.33"
   },
   "kui": {
