--- a/plugins/plugin-tutorials/package.json
+++ b/plugins/plugin-tutorials/package.json
@@ -28,8 +28,8 @@
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
-    "marked": "^0.6.1"
+    "jquery": "3.3.1",
+    "marked": "0.6.1"
   },
   "kui": {
     "headless": false
