--- a/plugins/plugin-wskflow/package.json
+++ b/plugins/plugin-wskflow/package.json
@@ -39,12 +39,12 @@
     "chokidar"
   ],
   "dependencies": {
-    "chokidar": "^2.1.5",
-    "d3": "^3.5.17",
+    "chokidar": "2.1.5",
+    "d3": "3.5.17",
     "elkjs": "0.3.0",
-    "es6-promise-pool": "^2.5.0",
+    "es6-promise-pool": "2.5.0",
     "expand-home-dir": "0.0.3",
-    "jquery": "^3.3.1",
+    "jquery": "3.3.1",
     "tmp": "0.0.33"
   },
   "kui": {
