chore(release): publish
 - @kui-shell/core@2.25.0
 - @kui-shell/builder@0.25.0
 - @kui-shell/proxy@0.25.0
 - @kui-shell/test@0.0.21
 - @kui-shell/plugin-apache-composer@0.30.0
 - @kui-shell/plugin-bash-like@0.14.0
 - @kui-shell/plugin-core-support@0.25.0
 - @kui-shell/plugin-editor@0.14.0
 - @kui-shell/plugin-grid@0.14.0
 - @kui-shell/plugin-k8s@0.25.0
 - @kui-shell/plugin-manager@0.0.31
 - @kui-shell/plugin-openwhisk-debug@0.0.31
 - @kui-shell/plugin-openwhisk-editor-extensions@0.0.24
 - @kui-shell/plugin-openwhisk@0.25.0
 - @kui-shell/plugin-proxy-support@0.25.0
 - @kui-shell/plugin-tutorials@0.25.0
 - @kui-shell/plugin-wrk@0.11.0
 - @kui-shell/plugin-wskflow@0.14.0

--- a/plugins/plugin-bash-like/package.json
+++ b/plugins/plugin-bash-like/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-bash-like",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "description": "Kui plugin that offers local bash-like shell integrations",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -37,7 +37,13 @@
   },
   "kui": {
     "exclude": {
-      "headless": [ "asciidoctor.js", "marked", "node-pty", "ws", "xterm" ]
+      "headless": [
+        "asciidoctor.js",
+        "marked",
+        "node-pty",
+        "ws",
+        "xterm"
+      ]
     }
   },
   "publishConfig": {
