--- a/plugins/plugin-bash-like/package.json
+++ b/plugins/plugin-bash-like/package.json
@@ -30,7 +30,7 @@
     "diff2html": "2.7.0",
     "expand-home-dir": "0.0.3",
     "marked": "0.6.1",
-    "node-pty": "0.8.1",
+    "node-pty-prebuilt": "0.7.6",
     "shelljs": "0.8.3",
     "ws": "6.2.1",
     "xterm": "3.12.0"
@@ -40,7 +40,7 @@
       "headless": [
         "asciidoctor.js",
         "marked",
-        "node-pty",
+        "node-pty-prebuilt",
         "ws",
         "xterm"
       ]
