feat(plugins/plugins-tutorials): getting started shouldn't focus on Apache Composer
also fixes rendering bugs e.g. with font zooming
Fixes #1127

--- a/plugins/plugin-tutorials/samples/@tutorials/getting-started/package.json
+++ b/plugins/plugin-tutorials/samples/@tutorials/getting-started/package.json
@@ -1,6 +1,6 @@
 {
     "name": "getting-started",
-    "description": "Get to know Composer and the Shell",
+    "description": "Get to know Kui",
     "level": "Beginner",
     "sort": 0
 }
