--- a/plugins/plugin-wskflow/package.json
+++ b/plugins/plugin-wskflow/package.json
@@ -35,9 +35,6 @@
     "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
-  "webpack-prune": [
-    "chokidar"
-  ],
   "dependencies": {
     "chokidar": "2.1.5",
     "d3": "3.5.17",
@@ -48,7 +45,12 @@
     "tmp": "0.1.0"
   },
   "kui": {
-    "headless": false
+    "headless": false,
+    "exclude": {
+      "webpack": [
+        "chokidar"
+      ]
+    }
   },
   "publishConfig": {
     "access": "public"
