fix(plugins/plugin-wrk): switch to https for wrk dependence
Fixes #1172

--- a/plugins/plugin-wrk/package.json
+++ b/plugins/plugin-wrk/package.json
@@ -32,7 +32,7 @@
     "pretty-ms": "4.0.0",
     "properties-parser": "0.3.1",
     "tmp": "0.1.0",
-    "wrk": "git://github.com/starpit/node-wrk.git#latency_stacks"
+    "wrk": "https://github.com/starpit/node-wrk#latency_stacks"
   },
   "publishConfig": {
     "access": "public"
