--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ keys
 
 # these seem to come from node-pty or xterm.js
 .swp
+
+# we will copy this file out of packages/kui-builder for local dev
+.npmrc
