Avoiding npx for devDependencies
npm adds devDependencies executables to PATH when running scripts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preinstall": "cp packages/kui-builder/npmrc .npmrc",
     "build:configure": "CLIENT_HOME=./clients/default node packages/kui-builder/lib/configure.js && CLIENT_HOME=./clients/default ./packages/kui-builder/dist/dev/build.sh && CLIENT_HOME=./clients/default ./packages/kui-builder/bin/seticon.js",
     "build:electron-for-development": "npm run build:configure && npm run compile && for i in plugins/*; do if [ -d $i/node_modules ]; then (cd build/plugins/`basename $i` && rm -rf node_modules && cp -a ../../../$i/node_modules .); fi; done",
-    "build:hoist": "npx lerna bootstrap --ignore-prepublish --hoist",
+    "build:hoist": "lerna bootstrap --ignore-prepublish --hoist",
     "postinstall": "npm run build:hoist && npm run build:electron-for-development"
   },
   "dependencies": {},
