style: add ESLint

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the monorepo for Kui, the hybrid command-line/GUI electron-based Kubernetes tool",
   "main": "build/packages/app/src/main/main.js",
   "scripts": {
-    "lint": "./packages/kui-builder/bin/lint.sh",
+    "lint": "eslint '**/*.ts'",
     "test": "cd packages/tests && npm run test",
     "compile": "MONOREPO_MODE=true CLIENT_HOME=./clients/default ./packages/kui-builder/bin/compile.sh",
     "watch": "./packages/kui-builder/bin/watch.sh",
@@ -19,6 +19,19 @@
   "dependencies": {},
   "devDependencies": {
     "lerna": "3.13.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.ts": [
+        "eslint --fix",
+        "git add"
+      ]
+    }
   },
   "repository": {
     "type": "git",
