--- a/plugins/plugin-tekton/package.json
+++ b/plugins/plugin-tekton/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@kui-shell/plugin-wskflow",
+  "name": "@kui-shell/plugin-tekton",
   "version": "0.21.0",
-  "description": "Visualizations for Composer apps",
+  "description": "Visualizations for Tekton Pipelines",
   "license": "Apache-2.0",
-  "author": "Kerry Chang",
+  "author": "Nick Mitchell",
   "homepage": "https://github.com/IBM/kui#readme",
   "bugs": {
     "url": "https://github.com/IBM/kui/issues/new"
@@ -16,45 +16,25 @@
     "kui",
     "plugin",
     "OpenWhisk",
-    "Apache Composer",
+    "Tekton",
     "visualization",
-    "step functions",
     "flow",
     "wskflow"
   ],
-  "contributors": [
-    "Mengting Yan",
-    "Nick Mitchell"
-  ],
-  "bin": {
-    "@kui-shell/plugin/wskflow/webpack/pre": "bin/prune-for-browser.sh",
-    "@kui-shell/plugin/wskflow/webpack/post": "bin/restore-after-prune.sh"
-  },
   "main": "plugin.js",
   "scripts": {
     "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
-    "chokidar": "2.1.5",
-    "d3": "3.5.17",
     "debug": "^4.1.1",
-    "elkjs": "0.3.0",
-    "es6-promise-pool": "2.5.0",
     "expand-home-dir": "0.0.3",
-    "jquery": "3.4.1",
-    "tmp": "0.1.0"
+    "js-yaml": "^3.13.1"
   },
   "kui": {
-    "headless": false,
-    "exclude": {
-      "webpack": [
-        "chokidar"
-      ]
-    }
+    "headless": false
   },
   "publishConfig": {
     "access": "public"
-  },
-  "gitHead": "89de9f78e8a1a2bdd29d2e17d7c608ab006c6d32"
+  }
 }
