--- a/plugins/plugin-openwhisk-editor-extensions/package.json
+++ b/plugins/plugin-openwhisk-editor-extensions/package.json
@@ -31,5 +31,8 @@
   "gitHead": "89de9f78e8a1a2bdd29d2e17d7c608ab006c6d32",
   "dependencies": {
     "debug": "4.1.1"
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
