--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -21,11 +21,10 @@
     "kui-link-artifacts.sh": "./bin/kui-link-artifacts.sh",
     "link-source-assets.sh": "./bin/link-source-assets.sh",
     "link-build-assets.sh": "./bin/link-build-assets.sh",
-    "kui-lint": "./bin/lint.sh",
     "kui-watch": "./bin/watch.sh"
   },
   "scripts": {
-    "tsconfig:prepack": "cp tsconfig.json tsconfig.prepack.json; node -e 'const pjson=require(`./tsconfig.json`); pjson.compilerOptions.baseUrl=`../../..`; pjson.compilerOptions.outDir=`${pjson.compilerOptions.baseUrl}/build`; delete pjson.compilerOptions.paths; pjson.include=pjson.include.map(s=>`../${s}`); require(`fs`).writeFileSync(`tsconfig.json`, JSON.stringify(pjson, undefined, 2))'",
+    "tsconfig:prepack": "cp ../../tsconfig.json tsconfig.prepack.json; node -e 'const pjson=require(`./tsconfig.json`); pjson.compilerOptions.baseUrl=`../../..`; pjson.compilerOptions.outDir=`${pjson.compilerOptions.baseUrl}/build`; delete pjson.compilerOptions.paths; pjson.include=pjson.include.map(s=>`../${s}`); require(`fs`).writeFileSync(`tsconfig.json`, JSON.stringify(pjson, undefined, 2))'",
     "tsconfig:postpack": "mv tsconfig.prepack.json tsconfig.json",
     "prepack": "npm run tsconfig:prepack; rm -rf build && mkdir build && tar -C ../../build/packages/$(basename `pwd`)/src --exclude tsconfig.json --exclude test --exclude node_modules -cf - . | tar -C build -xf - && find build -type l -exec rm {} \\; && cp -a build/* . && chmod +x kui-dist-init.js",
     "postpack": "npm run tsconfig:postpack; for i in build/*; do rm -rf ./`basename $i`; done"
@@ -42,10 +41,7 @@
     "electron": "5.0.1",
     "fs-extra": "7.0.1",
     "spectron": "5.0.0",
-    "terser": "3.17.0",
-    "tslint": "5.16.0",
-    "tslint-config-standard": "8.0.1",
-    "typescript": "3.4.5"
+    "terser": "3.17.0"
   },
   "kui": {
     "exclude": {
