Fix path in last commit

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the monorepo for Kui, the hybrid command-line/GUI electron-based Kubernetes tool",
   "main": "build/packages/app/src/main/main.js",
   "scripts": {
-    "lint": "tslint --config ./packages/kui-builder/tslint.json --project ./packages/kui-builder",
+    "lint": "tslint --config ./packages/kui-builder/tslint.json --project .",
     "test": "cd packages/tests && npm run test",
     "compile": "MONOREPO_MODE=true CLIENT_HOME=./clients/default ./packages/kui-builder/bin/compile.sh",
     "watch": "./packages/kui-builder/bin/watch.sh",
