feat: pty table parsing
Fixes #1516

--- a/plugins/plugin-bash-like/package.json
+++ b/plugins/plugin-bash-like/package.json
@@ -31,6 +31,7 @@
     "marked": "0.6.2",
     "node-pty": "0.8.1",
     "shelljs": "0.8.3",
+    "strip-ansi": "^5.2.0",
     "ws": "6.2.1",
     "xterm": "3.13.0"
   },
