--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -31,19 +31,20 @@
   },
   "dependencies": {
     "@types/debug": "4.1.4",
+    "@types/js-yaml": "^3.12.1",
     "@types/mkdirp-promise": "5.0.0",
-    "@types/mocha": "5.2.6",
+    "@types/mocha": "5.2.7",
     "@types/needle": "^2.0.4",
-    "@types/node": "11.13.4",
-    "@types/swagger-schema-official": "2.0.15",
+    "@types/node": "12.0.4",
+    "@types/swagger-schema-official": "2.0.16",
     "@types/webdriverio": "4.13.1",
     "colors": "1.3.3",
     "debug": "4.1.1",
-    "electron": "5.0.1",
-    "fs-extra": "7.0.1",
+    "electron": "5.0.2",
+    "fs-extra": "8.0.1",
     "spectron": "5.0.0",
     "terser": "3.17.0",
-    "typescript": "3.4.5"
+    "typescript": "3.5.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.9.0",
