chore(packages/kui-builder): add esnext support to tsconfig.json
Fixes #1607

--- a/packages/kui-builder/tsconfig.json
+++ b/packages/kui-builder/tsconfig.json
@@ -8,6 +8,13 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "baseUrl": "../..",
+    "lib": [
+      "dom",
+      "esnext",
+      "es6",
+      "dom.iterable",
+      "scripthost"
+    ],
     "paths": {
       "@kui-shell/core/tests/*": ["packages/app/tests/*"],
       "@kui-shell/settings/*": ["packages/app/build/*"],
