--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,5 +38,26 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-var-requires": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "plugins/plugin-apache-composer/**/*.ts",
+        "plugins/plugin-bash-like/**/*.ts",
+        "plugins/plugin-core-support/**/*.ts",
+        "plugins/plugin-editor/**/*.ts",
+        "plugins/plugin-grid/**/*.ts",
+        "plugins/plugin-manager/**/*.ts",
+        "plugins/plugin-openwhisk-debug/**/*.ts",
+        "plugins/plugin-openwhisk-editor-extensions/**/*.ts",
+        "plugins/plugin-proxy-support/**/*.ts",
+        "plugins/plugin-tutorials/**/*.ts",
+        "plugins/plugin-wrk/**/*.ts",
+        "plugins/plugin-wskflow/**/*.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-unused-vars": 1
+      }
+    }
+  ]
 }
