--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -38,6 +38,7 @@
     "@types/node": "12.0.4",
     "@types/swagger-schema-official": "2.0.16",
     "@types/webdriverio": "4.13.1",
+    "@types/yargs-parser": "^13.0.0",
     "colors": "1.3.3",
     "debug": "4.1.1",
     "electron": "5.0.3",
