--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,6 +48,7 @@
         "plugins/plugin-core-support/**/*.ts",
         "plugins/plugin-editor/**/*.ts",
         "plugins/plugin-grid/**/*.ts",
+        "plugins/plugin-k8s/**/*.ts",
         "plugins/plugin-manager/**/*.ts",
         "plugins/plugin-openwhisk-debug/**/*.ts",
         "plugins/plugin-openwhisk-editor-extensions/**/*.ts",
