test: travis test webpack build with http and no compression
Part of #1698

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,9 @@ env:
   global:
     - TRAVIS_KUBE_VERSION=1.12 # kubeadm-dind
     - TRAVIS_HELM_VERSION=2.13.0 # kubeadm-dind
-    - WEBPACK_CLIENT_URL="https://localhost:9080/"
+    - WEBPACK_CLIENT_URL="http://localhost:9080/"
+    - WEB_COMPRESS=none
+    - KUI_USE_HTTP=true
     - TEST_ORG=testorg
     - TEST_SPACE=testspace
     - LOCAL_OPENWHISK=true # allows e.g. openwhisk/src/test/openwhisk1/headless to avoid trying to host set <not-local>
