--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ env:
 
     - WAIT_LAYERS="k8s"
       LAYERS="k8s1 k8s2"
+      KUI_USE_PROXY=true
       MOCHA_TARGETS="electron"
       NEEDS_HEADLESS=true
       NEEDS_KUBERNETES=true
