--- a/plugins/plugin-tutorials/package.json
+++ b/plugins/plugin-tutorials/package.json
@@ -31,6 +31,9 @@
     "jquery": "3.4.1",
     "marked": "0.6.2"
   },
+  "devDependencies": {
+    "@types/marked": "^0.6.5"
+  },
   "kui": {
     "headless": false
   },
