--- a/plugins/plugin-k8s/package.json
+++ b/plugins/plugin-k8s/package.json
@@ -28,6 +28,7 @@
     "debug": "4.1.1",
     "fs-extra": "8.0.1",
     "js-yaml": "3.13.1",
+    "marked": "^0.6.2",
     "needle": "2.4.0",
     "parse-duration": "0.1.1",
     "semver": "6.1.1",
