--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,26 @@
   ],
   "rules": {
     "no-undef": "off",
-    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/camelcase": ["error", {
+      "allow": [
+        "wrap_line_length",
+        "indent_size",
+        "api_key",
+        "apigw_token",
+        "apigw_space_guid",
+        "ignore_certs",
+        "__cloudshell_decorations",
+        "follow_max",
+        "open_timeout",
+        "read_timeout",
+        "get_activation",
+        "action_body",
+        "rule_body",
+        "invoke_options",
+        "invoke_params",
+        "convert_to_fqn"
+      ]
+    }],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/indent": ["error", 2],
