--- a/plugins/plugin-operator-framework/package.json
+++ b/plugins/plugin-operator-framework/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@kui-shell/plugin-k8s",
-  "version": "0.34.0",
-  "description": "Kui plugin for kubernetes",
+  "name": "@kui-shell/plugin-operator-framework",
+  "version": "0.0.1",
+  "description": "Kui plugin for Operator Framework",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
   "homepage": "https://github.com/IBM/kui#readme",
@@ -15,7 +15,9 @@
   "keywords": [
     "kui",
     "plugin",
-    "kubernetes"
+    "kubernetes",
+    "openshift",
+    "operators"
   ],
   "main": "plugin.js",
   "scripts": {
@@ -23,19 +25,10 @@
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
-    "archiver": "3.0.0",
-    "command-exists": "1.2.8",
     "debug": "4.1.1",
-    "fs-extra": "8.0.1",
-    "js-yaml": "3.13.1",
-    "needle": "2.4.0",
-    "parse-duration": "0.1.1",
-    "semver": "6.1.1",
-    "tmp": "0.1.0",
-    "uuid": "3.3.2"
+    "marked": "^0.6.2"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "gitHead": "89de9f78e8a1a2bdd29d2e17d7c608ab006c6d32"
+  }
 }
