--- a/plugins/plugin-operator-framework/package.json
+++ b/plugins/plugin-operator-framework/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "debug": "4.1.1",
-    "marked": "^0.6.2"
+    "marked": "0.6.2"
   },
   "publishConfig": {
     "access": "public"
