chore: switch travis to microk8s
Fixes #1791

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
-# necessary for kubeadm-dind
-#dist: xenial
-
 language: node_js
 node_js: 8
-dist: trusty
+dist: xenial # Note: dist>=xenial required by microk8s
 
 services:
   - docker
@@ -15,7 +12,7 @@ os:
 env:
   matrix:
     - SCRIPTS="lint.sh typecov.sh"
-      LAYERS="core bash-like core-support field-installed-plugins editor"
+      LAYERS="core bash-like core-support editor"
       MOCHA_TARGETS="webpack electron"
       KUI_USE_PROXY=false
       NEEDS_IBMCLOUD_CLI=true # see plugins/plugin-bash-like/src/test/bash-like/bash-like.ts
@@ -25,7 +22,7 @@ env:
       KUI_USE_PROXY=false
       NEEDS_OPENWHISK=true
 
-    - LAYERS="openwhisk2 openwhisk4"
+    - LAYERS="openwhisk2 openwhisk4 composer1 composer2 composer3"
       MOCHA_TARGETS="electron"
       NEEDS_OPENWHISK=true
       NEEDS_OPENWHISK_API_GATEWAY=true
@@ -33,16 +30,13 @@ env:
       NEEDS_OPENWHISK_JAVA8=true
       NEEDS_SECOND_OPENWHISK_AUTH=true # see plugins/plugin-openwhisk/src/test/openwhisk2/auth.ts
 
-    - LAYERS="composer1 composer2 composer3"
-      MOCHA_TARGETS="electron"
-      NEEDS_OPENWHISK=true
-
     - WAIT_LAYERS="k8s"
       LAYERS="k8s1 k8s2"
       KUI_USE_PROXY=true
       MOCHA_TARGETS="electron"
       NEEDS_HEADLESS=true
       NEEDS_KUBERNETES=true
+      NEEDS_HELM=true
 
     - LAYERS="HEADLESS"
       NEEDS_HEADLESS=true
@@ -50,24 +44,39 @@ env:
       NEEDS_KUBERNETES=true
 
   global:
-    - TRAVIS_KUBE_VERSION=1.12 # kubeadm-dind
-    - TRAVIS_HELM_VERSION=2.13.0 # kubeadm-dind
+    - TRAVIS_KUBE_VERSION=1.12
+    - TRAVIS_HELM_VERSION=2.13.0
     - WEBPACK_CLIENT_URL="http://localhost:9080/"
     - WEB_COMPRESS=none
     - KUI_USE_HTTP=true
     - TEST_ORG=testorg
     - TEST_SPACE=testspace
     - LOCAL_OPENWHISK=true # allows e.g. openwhisk/src/test/openwhisk1/headless to avoid trying to host set <not-local>
+    - NO_OPENWHISK_API_MGMT=true # no openwhisk api management support
     - IGNORE_CERTS=true # apache-composer needs this, because it doesn't obey INSECURE_SSL in wskprops
     - PATH=bin:$PATH
     - NO_MAC_DMG_INSTALLER=`[[ "$TRAVIS_OS_NAME" == linux ]] && echo true` # we can't build macOS DMG files in linux travis :(
     - WINDOW_WIDTH=1400                   # ! important ! so that clicks don't fail due to elements being off-viewport
     - WINDOW_HEIGHT=1050                  # ! ibid !
-    - LINUX_BUILD="${TRAVIS_BUILD_DIR}/clients/default/dist/electron/Kui-linux-x64/Kui" # test against linux electron build
-    - OSX_BUILD="${TRAVIS_BUILD_DIR}/clients/default/dist/electron/Kui-darwin-x64/Kui.app/Contents/MacOS/Kui" # test against darwin electron build
+    - LINUX_BUILD="${TRAVIS_BUILD_DIR}/clients/electron/dist/electron/Kui-linux-x64/Kui" # test against linux electron build
+    - OSX_BUILD="${TRAVIS_BUILD_DIR}/clients/electron/dist/electron/Kui-darwin-x64/Kui.app/Contents/MacOS/Kui" # test against darwin electron build
     - TEST_FROM_BUILD=`[ "$TRAVIS_OS_NAME" == linux ] && echo "$LINUX_BUILD" || echo "$OSX_BUILD"`
     - BUILD_ENV=production                # please note: used in dist/electron/build.sh with npm prune --production
     - HOMEBREW_NO_AUTO_UPDATE=1           # disable auto update before running brew install, brew upgrade or brew tap
+
+# to save some time in the runs, exclude layers that are not currently
+# compatible with osx; the travis method for this is a bit clumsy: we
+# have to repeat the entire env!
+matrix:
+  exclude:
+    - os: osx
+      env: LAYERS="openwhisk1 openwhisk3 grid" MOCHA_TARGETS="webpack electron" KUI_USE_PROXY=false NEEDS_OPENWHISK=true      
+    - os: osx
+      env: LAYERS="openwhisk2 openwhisk4 composer1 composer2 composer3" MOCHA_TARGETS="electron" NEEDS_OPENWHISK=true NEEDS_OPENWHISK_API_GATEWAY=true NEEDS_OPENWHISK_NODEJS8=true NEEDS_OPENWHISK_JAVA8=true NEEDS_SECOND_OPENWHISK_AUTH=true
+    - os: osx
+      env: WAIT_LAYERS="k8s" LAYERS="k8s1 k8s2" KUI_USE_PROXY=true MOCHA_TARGETS="electron" NEEDS_HEADLESS=true NEEDS_KUBERNETES=true NEEDS_HELM=true
+    - os: osx
+      env: LAYERS="HEADLESS" NEEDS_HEADLESS=true NEEDS_OPENWHISK=true NEEDS_KUBERNETES=true
 
 install: ./tools/travis/test/install.sh
 script: ./tools/travis/test/script.sh
