style: fix some @typescript-eslint/no-use-before-define errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,18 @@
   "plugins": [
     "@typescript-eslint/eslint-plugin"
   ],
+  "overrides": [
+    {
+      "files": [
+        "packages/app/src/webapp/**/*.ts",
+        "plugins/plugin-core-support/src/lib/**/*.ts",
+        "plugins/plugin-k8s/src/lib/**/*.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-use-before-define": "off"
+      }
+    }
+  ],
   "rules": {
     "no-undef": "off",
     "@typescript-eslint/camelcase": ["error", {
@@ -42,7 +54,6 @@
       }
     }],
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-var-requires": "off"
   }
 }
