--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
     - WAIT_LAYERS="k8s"
       LAYERS="HEADLESS k8s1 k8s2"
       KUI_USE_PROXY=true
-      MOCHA_TARGETS="electron"
+      MOCHA_TARGETS="webpack electron"
       NEEDS_KUBERNETES=true
       NEEDS_HELM=true
       NEEDS_HEADLESS=true
@@ -66,11 +66,11 @@ env:
 matrix:
   exclude:
     - os: osx
-      env: LAYERS="openwhisk1 openwhisk3 grid" MOCHA_TARGETS="webpack electron" KUI_USE_PROXY=false NEEDS_OPENWHISK=true      
+      env: LAYERS="openwhisk1 openwhisk3 grid" MOCHA_TARGETS="webpack electron" KUI_USE_PROXY=false NEEDS_OPENWHISK=true
     - os: osx
       env: LAYERS="openwhisk2 openwhisk4 composer1 composer2" MOCHA_TARGETS="electron" NEEDS_OPENWHISK=true NEEDS_OPENWHISK_API_GATEWAY=true NEEDS_OPENWHISK_NODEJS8=true NEEDS_OPENWHISK_JAVA8=true NEEDS_SECOND_OPENWHISK_AUTH=true
     - os: osx
-      env: WAIT_LAYERS="k8s" LAYERS="HEADLESS k8s1 k8s2" KUI_USE_PROXY=true MOCHA_TARGETS="electron" NEEDS_KUBERNETES=true NEEDS_HELM=true NEEDS_HEADLESS=true NEEDS_OPENWHISK=true
+      env: WAIT_LAYERS="k8s" LAYERS="HEADLESS k8s1 k8s2" KUI_USE_PROXY=true MOCHA_TARGETS="webpack electron" NEEDS_KUBERNETES=true NEEDS_HELM=true NEEDS_HEADLESS=true NEEDS_OPENWHISK=true
 
 install: ./tools/travis/test/install.sh
 script: ./tools/travis/test/script.sh
@@ -82,7 +82,7 @@ jobs:
     - stage: npm release
       env: ""
       node_js: "8"
-      script: 
+      script:
         - echo "NPM Deploying Started ..."
         - echo "Repo name:$TRAVIS_REPO_SLUG"
         - echo "Branch name:$TRAVIS_BRANCH"
