--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,7 @@ jobs:
             on:
               branch: master
               repo: IBM/kui
+              condition: $TRAVIS_EVENT_TYPE = push
           - provider: script
             script: npm install && npx lerna publish preminor --no-git-tag-version --no-push --canary --yes --dist-tag nightly --preid nightly.$TRAVIS_BUILD_NUMBER
             skip_cleanup: true
