chore: dep optimization
Fixes #1846

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@lerna/bootstrap": "^3.15.0"
+    "@lerna/bootstrap": "^3.15.0",
+    "electron": "5.0.6"
   },
   "husky": {
     "hooks": {
