--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -18,6 +18,7 @@
     "kui-run-webpack": "./dist/webpack/bin/webpack-client.sh",
     "kui-init": "./kui-dist-init.js",
     "kui-compile": "./bin/compile.sh",
+    "kui-prescan": "./bin/prescan.sh",
     "kui-link-artifacts.sh": "./bin/kui-link-artifacts.sh",
     "link-source-assets.sh": "./bin/link-source-assets.sh",
     "link-build-assets.sh": "./bin/link-build-assets.sh",
@@ -30,24 +31,19 @@
     "postpack": "npm run tsconfig:postpack; for i in build/*; do rm -rf ./`basename $i`; done"
   },
   "dependencies": {
+    "colors": "1.3.3",
+    "debug": "4.1.1",
+    "fs-extra": "8.0.1"
+  },
+  "devDependencies": {
     "@types/debug": "4.1.4",
     "@types/js-yaml": "3.12.1",
     "@types/mkdirp-promise": "5.0.0",
-    "@types/mocha": "5.2.7",
     "@types/needle": "2.0.4",
     "@types/node": "12.0.10",
     "@types/swagger-schema-official": "2.0.17",
-    "@types/webdriverio": "4.13.1",
-    "@types/yargs-parser": "^13.0.0",
-    "colors": "1.3.3",
-    "debug": "4.1.1",
-    "electron": "5.0.5",
-    "fs-extra": "8.0.1",
-    "spectron": "7.0.0",
-    "terser": "3.17.0",
-    "typescript": "3.5.2"
-  },
-  "devDependencies": {
+    "@types/tmp": "0.1.0",
+    "@types/yargs-parser": "13.0.0",
     "@typescript-eslint/eslint-plugin": "1.11.0",
     "@typescript-eslint/parser": "1.11.0",
     "eslint": "6.0.1",
@@ -56,15 +52,14 @@
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.0",
-    "husky": "2.6.0",
-    "lint-staged": "8.2.1"
+    "husky": "2.5.0",
+    "lint-staged": "8.2.1",
+    "terser": "3.17.0",
+    "typescript": "3.5.2"
   },
   "kui": {
     "exclude": {
-      "webpack": [
-        "electron",
-        "spectron"
-      ]
+      "webpack": []
     }
   },
   "publishConfig": {
