--- a/plugins/plugin-manager/package.json
+++ b/plugins/plugin-manager/package.json
@@ -30,7 +30,10 @@
     "which": "1.3.1"
   },
   "kui": {
-    "webpack": false
+    "webpack": false,
+    "electron": false,
+    "headless": false,
+    "proxy": false
   },
   "publishConfig": {
     "access": "public"
