--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ os:
 
 env:
   matrix:
-    - SCRIPTS="lint.sh typecov.sh"
+    - SCRIPTS="lint.sh typecov.sh build-webpack-client.sh"
       LAYERS="core bash-like core-support editor"
       MOCHA_TARGETS="webpack electron"
       KUI_USE_PROXY=false
