feat: update sidecar tab UI
this also incorporates the carbon components 10 stylesheet

Fixes #1867

--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -53,7 +53,8 @@
   },
   "kui": {
     "headless": false,
-    "electron": false
+    "electron": false,
+    "proxy": false
   },
   "publishConfig": {
     "access": "public"
