--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,14 @@ os:
 
 env:
   matrix:
-    - SCRIPTS="lint.sh typecov.sh build-webpack-client.sh"
+    - SCRIPTS="lint.sh typecov.sh"
       LAYERS="core bash-like core-support editor"
       MOCHA_TARGETS="webpack electron"
       KUI_USE_PROXY=false
       NEEDS_IBMCLOUD_CLI=true # see plugins/plugin-bash-like/src/test/bash-like/bash-like.ts
 
-    - LAYERS="openwhisk1 openwhisk3 grid"
+    - SCRIPTS="build-webpack-client.sh"
+      LAYERS="openwhisk1 openwhisk3 grid"
       MOCHA_TARGETS="webpack electron"
       KUI_USE_PROXY=false
       NEEDS_OPENWHISK=true
@@ -66,7 +67,7 @@ env:
 matrix:
   exclude:
     - os: osx
-      env: LAYERS="openwhisk1 openwhisk3 grid" MOCHA_TARGETS="webpack electron" KUI_USE_PROXY=false NEEDS_OPENWHISK=true
+      env: SCRIPTS="build-webpack-client.sh" LAYERS="openwhisk1 openwhisk3 grid" MOCHA_TARGETS="webpack electron" KUI_USE_PROXY=false NEEDS_OPENWHISK=true
     - os: osx
       env: LAYERS="openwhisk2 openwhisk4 composer1 composer2" MOCHA_TARGETS="electron" NEEDS_OPENWHISK=true NEEDS_OPENWHISK_API_GATEWAY=true NEEDS_OPENWHISK_NODEJS8=true NEEDS_OPENWHISK_JAVA8=true NEEDS_SECOND_OPENWHISK_AUTH=true
     - os: osx
