style: lint js files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,5 +47,13 @@
         }
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
