--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,5 @@
 build/
-**/*/node_modules/*
+**/*/dist/
+**/*/node_modules/
 **/*.d.ts
+plugins/plugin-apache-composer/tests/data/composer/composer-source-expect-errors/if-bad.js
