chore: optimize startup time
Fixes #1916

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "no-undef": "off",
+    "import/first": "off",
     "@typescript-eslint/camelcase": [
       "error",
       {
