--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js: 8
 dist: xenial # Note: dist>=xenial required by microk8s
+cache: false # as of 20190709 trav-ci.org started loading garbage from the build cache
 
 services:
   - docker
