--- a/packages/proxy/app/package.json
+++ b/packages/proxy/app/package.json
@@ -24,6 +24,7 @@
     "cors": "2.8.5",
     "debug": "4.1.1",
     "express": "4.16.4",
-    "morgan": "1.9.1"
+    "morgan": "1.9.1",
+    "uuid": "3.3.2"
   }
 }
