chore: remove member-delimiter-style rule in favor of prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,15 +39,7 @@
         ]
       }
     ],
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/member-delimiter-style": [
-      "error",
-      {
-        "multiline": {
-          "delimiter": "none"
-        }
-      }
-    ]
+    "@typescript-eslint/explicit-function-return-type": "off"
   },
   "overrides": [
     {
