style: remove @typescript-eslint/no-parameter-properties
Fixes #1986

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         ]
       }
     ],
+    "@typescript-eslint/no-parameter-properties": "off",
     "@typescript-eslint/explicit-function-return-type": "off"
   },
   "overrides": [
